// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreDisplay Snapshots renders correctly with non-zero score 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1e293b",
      "borderColor": "#334155",
      "borderRadius": 12,
      "borderWidth": 2,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "minWidth": 240,
      "paddingHorizontal": 20,
      "paddingVertical": 12,
    }
  }
  testID="score-container"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#94a3b8",
          "fontSize": 12,
          "fontWeight": "bold",
          "letterSpacing": 1,
          "marginBottom": 4,
        }
      }
    >
      SCORE
    </Text>
    <Text
      style={
        {
          "color": "#f8fafc",
          "fontSize": 24,
          "fontWeight": "bold",
        }
      }
      testID="current-score"
    >
      1250
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#334155",
        "height": "100%",
        "marginHorizontal": 15,
        "width": 2,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#94a3b8",
          "fontSize": 12,
          "fontWeight": "bold",
          "letterSpacing": 1,
          "marginBottom": 4,
        }
      }
    >
      BEST
    </Text>
    <Text
      style={
        {
          "color": "#10b981",
          "fontSize": 24,
          "fontWeight": "bold",
        }
      }
      testID="high-score"
    >
      5000
    </Text>
  </View>
</View>
`;

exports[`ScoreDisplay Snapshots renders correctly with zero score 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1e293b",
      "borderColor": "#334155",
      "borderRadius": 12,
      "borderWidth": 2,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "minWidth": 240,
      "paddingHorizontal": 20,
      "paddingVertical": 12,
    }
  }
  testID="score-container"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#94a3b8",
          "fontSize": 12,
          "fontWeight": "bold",
          "letterSpacing": 1,
          "marginBottom": 4,
        }
      }
    >
      SCORE
    </Text>
    <Text
      style={
        {
          "color": "#f8fafc",
          "fontSize": 24,
          "fontWeight": "bold",
        }
      }
      testID="current-score"
    >
      0
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#334155",
        "height": "100%",
        "marginHorizontal": 15,
        "width": 2,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#94a3b8",
          "fontSize": 12,
          "fontWeight": "bold",
          "letterSpacing": 1,
          "marginBottom": 4,
        }
      }
    >
      BEST
    </Text>
    <Text
      style={
        {
          "color": "#10b981",
          "fontSize": 24,
          "fontWeight": "bold",
        }
      }
      testID="high-score"
    >
      0
    </Text>
  </View>
</View>
`;
